# SEU-CVStream

./: .gitignore  LICENSE  README.md  ai_summary.py  asr_cloud.py  cookies.json  local_asr_worker.py  login.py  main.py  ppt_extractor.py  pyproject.toml  ramdisk.py  requirements.txt  task_handler.py
.streamlit/: config.toml
res/ImDiskTk20250206/: files.cab  install.bat
